--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
 
 body {
     margin: 100px auto 0;
-    max-width: 1200px;
+    max-width: 1100px;
     width: clamp(300px, 100%, 90vw);
     line-height: 1.6;
     font-size: 18px;
@@ -36,7 +36,7 @@ nav {
     position: fixed;
     top: 0;
     padding-top: 40px;
-    max-width: 1200px;
+    max-width: 1100px;
     width: clamp(300px, 100%, 90vw);
     z-index: 1000;
 }
@@ -174,6 +174,19 @@ nav li > a {
     to { opacity: 1; }
 }
 
+/* In-line links */
+
+.inline {
+    color: var(--color-black);
+    text-decoration: underline var(--color-blue);
+    text-decoration-thickness: 2.5px;
+}
+
+.inline:hover {
+    text-decoration: underline var(--color-red);
+    text-decoration-thickness: 2.5px;
+}
+
 /* Container for the tiles */
 #news-section {
     display: grid;
@@ -227,41 +240,63 @@ nav li > a {
 
 /* Members page styling */
 
-#team-section {
+#pi-section, #team-section {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(2, 1fr); /* 3 columns */
-    /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
 }
 
-#team-section h2 {
+#pi-section {
+    grid-template-columns: repeat(1, 1fr);
+}
+
+#team-section {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#pi-section h2, #team-section h2 {
     grid-column: 1 / -1;
     color: var(--color-black); 
     text-align: center;
     margin-bottom: 20px;
 }
 
-#team-section h2 {
+#pi-section h2, #team-section h2 {
     font-size: 26px;
     color: var(--color-black); 
     text-align: center;
     margin-bottom: 25px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    border-top: 1px solid var(--color-gray);
     border-bottom: 1px solid var(--color-gray);
     padding-top: 5px;
     padding-bottom: 5px;
 }
 
+#team-section h2 {
+    border-top: 1px solid var(--color-gray);
+}
+
 /* Team member card styling */
-.team-member, .pi-member {
+.pi-member {
+    display: flex;
+    gap: 20px;
+}
+
+.pi-member, .team-member {
     background-color: var(--color-white);
-    border: 1px solid var(--color-light-gray);
-    border-radius: 8px;
+    /* border: 1px solid var(--color-light-gray); */
+    /* border-radius: 8px; */
     padding: 25px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-align: left; 
+}
+
+.pi-member {
+    text-align: left; 
+}
+
+.team-member {
     text-align: center; 
 }
 
@@ -271,7 +306,16 @@ nav li > a {
 }
 
 /* Image styling */
-.team-member img, .pi-member img {
+.pi-member img {
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.team-member img {
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -309,9 +353,10 @@ nav li > a {
 /* Links styling */
 .team-member .links a, .pi-member .links a {
     color: var(--color-blue); /* Accent color for links */
+    font-weight: 600;
     text-decoration: none;
     margin: 0 8px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .team-member .links a:hover, .pi-member .links a:hover {
@@ -369,7 +414,7 @@ nav li > a {
 /* Higlight text color */
 
 ::selection {
-    background-color: var(--color-red); /* Replace with your preferred color */
+    background-color: var(--color-red);
     color: var(--color-white); /* Adjust text color for contrast */
 }
 
@@ -378,6 +423,9 @@ nav li > a {
     body {
         color: var(--color-white);
         background-color: var(--color-black);
+    }
+    .inline {
+        color: var(--color-white);
     }
     nav {
         background: var(--color-black);
@@ -411,14 +459,12 @@ nav li > a {
     }
     .team-member, .pi-member {
         background-color: var(--color-black);
-        border: 1px solid var(--color-dark-gray);
-        box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1); 
     }
     .team-member:hover, .pi-member:hover {
         transform: scale(1.025);
         box-shadow: 0 6px 16px rgba(255, 255, 255, 0.15); 
     }
-    #team-section h2 {
+    #pi-section h2, #team-section h2 {
         color: var(--color-white); 
     }
     .team-member h3, .pi-member h3 {
@@ -500,6 +546,10 @@ nav li > a {
         grid-template-columns: 1fr; /* Single column layout */
     }
     /* Team member card styling */
+    .pi-member {
+        display: grid;
+        text-align: center;
+    }
     .team-member, .pi-member {
         border: none;
         box-shadow: none;
