--- a/main.css
+++ b/main.css
@@ -32,66 +32,6 @@ h1,h2,h3 {
 }
 
 /* navbar */
-/* nav {
-    background: var(--color-white);
-    font-family: 'Spinnaker', sans-serif;
-    border-bottom: 1px solid var(--color-gray);
-    position: fixed;
-    top: 0;
-    padding-top: 40px;
-    max-width: 1100px;
-    width: clamp(300px, 100%, 90vw);
-    z-index: 1000;
-}
-nav a {
-    text-decoration: none;
-    color: var(--color-gray);
-    transition: 0.4s;
-}
-nav li a:hover {
-    color: var(--color-black);
-}
-nav li.active a {
-    color: var(--color-black);
-}
-nav .brand {
-    padding: 0px;
-    margin: 0;
-    color: var(--color-black);
-    font-size: 24px;
-    line-height: 40px;
-    text-transform: uppercase;
-}
-nav .menu-collapse {
-    float: right;
-}
-nav ul {
-    list-style: none;
-    margin-top: 6px;
-}
-nav li {
-    display: block;
-    float: left;
-}
-nav li > a {
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    line-height: 24px;
-    margin-left: 6px;
-    padding: 0 10px;
-    font-size: 14px;
-} */
-/* nav {
-    background: var(--color-white);
-    font-family: 'Spinnaker', sans-serif;
-    border-bottom: 1px solid var(--color-gray);
-    position: fixed;
-    top: 0;
-    padding-top: 40px;
-    max-width: 1100px;
-    width: clamp(300px, 100%, 90vw);
-    z-index: 1000;
-} */
 nav {
     font-family: 'Spinnaker', sans-serif;
     border-bottom:1px solid var(--color-white);
@@ -339,21 +279,13 @@ nav li>a {
 
 #pi-section h2, #team-section h2 {
     grid-column: 1 / -1;
-    color: var(--color-black); 
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#pi-section h2, #team-section h2 {
     font-size: 26px;
     color: var(--color-black); 
     text-align: center;
-    margin-bottom: 25px;
     text-transform: uppercase;
     letter-spacing: 1px;
     border-bottom: 1px solid var(--color-gray);
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 2.5px 0;
 }
 
 #team-section h2 {
@@ -368,12 +300,8 @@ nav li>a {
 
 .pi-member, .team-member {
     background-color: var(--color-white);
-    /* border: 1px solid var(--color-light-gray); */
-    /* border-radius: 8px; */
     padding: 25px;
-    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-align: left; 
 }
 
 .pi-member {
@@ -395,8 +323,7 @@ nav li>a {
     width: 240px;
     height: 240px;
     border-radius: 50%;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin: 20px 0 0 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -666,7 +593,7 @@ nav li>a {
         aspect-ratio: 1 / 1;
         object-fit: cover;
         border-radius: 10%;
-        margin-bottom: 15px;
+        margin: 0;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 }
