--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ nav a .brand {
     padding: 0;
     padding-left: calc(50% - 530px);
     margin: 0;
-    height: 35px;
+    height: 30px;
     transition: filter 0.5s ease;
 }
 
@@ -270,7 +270,7 @@ nav li>a {
 
 /* Members page styling */
 
-#pi-section, #team-section {
+#pi-section, #team-section, #past-team {
     display: grid;
     gap: 20px;
 }
@@ -279,11 +279,11 @@ nav li>a {
     grid-template-columns: repeat(1, 1fr);
 }
 
-#team-section {
+#team-section, #past-team {
     grid-template-columns: repeat(2, 1fr);
 }
 
-#pi-section h2, #team-section h2 {
+#pi-section h2, #team-section h2, #past-team h2 {
     grid-column: 1 / -1;
     font-size: 26px;
     color: var(--color-black); 
@@ -294,7 +294,7 @@ nav li>a {
     padding: 2.5px 0;
 }
 
-#team-section h2 {
+#team-section h2, #past-team h2 {
     border-top: 1px solid var(--color-gray);
 }
 
@@ -304,13 +304,13 @@ nav li>a {
     gap: 20px;
 }
 
-.pi-member, .team-member {
+.pi-member, .team-member, .past-member {
     background-color: var(--color-white);
     padding: 25px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.pi-member {
+.pi-member, .past-member {
     text-align: left; 
 }
 
@@ -318,7 +318,7 @@ nav li>a {
     text-align: center; 
 }
 
-.team-member:hover, .pi-member:hover {
+.team-member:hover, .pi-member:hover, .past-member:hover {
     background-color: white;
     transform: scale(1.05); 
     box-shadow: 0 8px 16px white; 
@@ -342,14 +342,14 @@ nav li>a {
 }
 
 /* Name styling */
-.team-member h3, .pi-member h3 {
+.team-member h3, .pi-member h3, .past-member h3 {
     font-size: 22px;
     color: var(--color-black);
     margin: 15px 0 5px;
     font-weight: bold;
 }
 
-.team-member p, .pi-member p {
+.team-member p, .pi-member p, .past-member p {
     font-size: 16px;
     color: var(--color-black);
 }
@@ -369,7 +369,7 @@ nav li>a {
 }
 
 /* Links styling */
-.team-member .links a, .pi-member .links a {
+.team-member .links a, .pi-member .links a, .past-member .links a {
     color: var(--color-black);
     font-weight: 500;
     text-decoration: underline var(--color-blue);
@@ -377,7 +377,7 @@ nav li>a {
     font-size: 16px;
 }
 
-.team-member .links a:hover, .pi-member .links a:hover {
+.team-member .links a:hover, .pi-member .links a:hover, .past-member .links a:hover {
     text-decoration: underline var(--color-red);
     text-decoration-thickness: 3px;
 }
@@ -482,21 +482,21 @@ nav li>a {
     .tile-link {
         color: var(--color-white);
     }
-    .team-member, .pi-member {
+    .team-member, .pi-member, .past-member {
         background-color: var(--color-black);
     }
-    .team-member:hover, .pi-member:hover {
+    .team-member:hover, .pi-member:hover, .past-member:hover {
         background-color: var(--black-highlight);
         transform: scale(1.025);
         box-shadow: 0 6px 16px var(--black-highlight); 
     }
-    #pi-section h2, #team-section h2 {
+    #pi-section h2, #team-section h2, #past-team h2 {
         color: var(--color-white); 
     }
-    .team-member h3, .pi-member h3 {
+    .team-member h3, .pi-member h3, .past-member h3 {
         color: var(--color-white);
     }
-    .team-member p, .pi-member p {
+    .team-member p, .pi-member p, .past-member p {
         color: var(--color-white);
     }
     .pi-member p:first-of-type, .team-member p:first-of-type {
@@ -505,7 +505,7 @@ nav li>a {
     .pi-member p:nth-of-type(2) {
         color: var(--color-light-gray);
     }
-    .team-member .links a, .pi-member .links a {
+    .team-member .links a, .pi-member .links a, .past-member .links a {
         color: var(--color-white);
     }
     #research h2 {
@@ -581,7 +581,7 @@ nav li>a {
     #news-section {
         grid-template-columns: 1fr; /* One column  */
     }
-    #team-section, #pi-section {
+    #team-section, #pi-section, #past-team {
         grid-template-columns: 1fr; /* Single column layout */
     }
     /* Team member card styling */
@@ -589,11 +589,11 @@ nav li>a {
         display: grid;
         text-align: center;
     }
-    .team-member, .pi-member {
+    .team-member, .pi-member, .past-member {
         border: none;
         box-shadow: none;
     }
-    .team-member:hover, .pi-member:hover {
+    .team-member:hover, .pi-member:hover, .past-member:hover {
         background-color: var(--color-white);
         transform: scale(1.025); 
         box-shadow: none;
@@ -613,7 +613,7 @@ nav li>a {
 /* Media query for dark themes */
 @media (prefers-color-scheme: dark){ 
     @media (max-width: 799px) {
-    .team-member:hover, .pi-member:hover {
+    .team-member:hover, .pi-member:hover, .past-member:hover {
         background-color: var(--color-black);
     }
 }}
