--- a/style/blog.css
+++ b/style/blog.css
@@ -234,3 +234,8 @@ img.figure {
     padding: 10px;
     border-left: 1px solid white;
 }
+
+::selection {
+    background-color: chocolate;
+    color: chartreuse; /* Adjust text color for contrast */
+}
